--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.76MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-12.26MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
+  - {name: 🇰🇷 韩国-5.24MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-13.99MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-388.7KB/s(Youtube:不良林), server: 20.239.179.251, port: 50045, type: vmess, uuid: 1617e875-e377-4e4f-85ef-dcf9e5e10df7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
+  - {name: 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇳 中国-13.89MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 20.239.179.251, port: 50044, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
   - {name: 🇰🇷 韩国-8.27MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.76MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇨🇳 中国-13.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇰🇷 韩国-8.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
