--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-388.7KB/s(Youtube:不良林), server: 20.239.179.251, port: 50045, type: vmess, uuid: 1617e875-e377-4e4f-85ef-dcf9e5e10df7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
-  - {name: 🇨🇦 加拿大-913.6KB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-4.24MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.79MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-13.99MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
   - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.37MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.75.136.21, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 38.68.134.85, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-913.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.24MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
