--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-13.99MB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
+  - {name: 🇰🇷 韩国-5.24MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: relay1.wallless.cloud, port: 39021, type: vmess, uuid: 6f686183-b399-4976-a60f-dd2685ef8075, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.37MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
   - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.75.136.21, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
